ros2_study/log/build_2025-11-11_16-41-43/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_service_server.py", line 1
    from my first_package_msgs.srv import MultiSpawn
            ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

